--- a/_pages/index.html
+++ b/_pages/index.html
@@ -43,7 +43,7 @@ action: Contact us
     </div>
     <div class="row">
         <div class="col-md-12">
-            <p><a href="/services">Services</a></p>
+            <p><a href="{{ site.baseurl }}/services">Services</a></p>
         </div>
     </div>
 </div>
@@ -60,7 +60,7 @@ action: Contact us
     </div>
     <div class="row">
         <div class="col-md-12">
-            <p><a href="/case-studies">Case studies</a></p>
+            <p><a href="{{ site.baseurl }}/case-studies">Case studies</a></p>
         </div>
     </div>
 </div>
@@ -78,7 +78,7 @@ action: Contact us
     </div>
     <div class="row">
         <div class="col-md-12">
-            <p><a href="/people">People</a></p>
+            <p><a href="{{ site.baseurl }}/people">People</a></p>
         </div>
     </div>
 </div>
