--- a/_pages/clients.html
+++ b/_pages/clients.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: Clients
-description: We work with mission-drive public sector organizations.
-excerpt: We work with mission-drive public sector organizations.
+description: We work with mission-driven public sector organizations.
+excerpt: We work with mission-driven public sector organizations.
 ---
 <div class="container">
     <div class="row">
